--- a/StripeTastic/platformio.ini
+++ b/StripeTastic/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+
+# using the latest stable version
+lib_deps = ESP Async WebServer
+;platform_packages = framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git // TODO: Remove if not needed.
