First implementation with splitted web source and code files

--- a/StripeTastic/platformio.ini
+++ b/StripeTastic/platformio.ini
@@ -16,3 +16,5 @@ framework = arduino
 # using the latest stable version
 lib_deps = ESP Async WebServer
 ;platform_packages = framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git // TODO: Remove if not needed.
+
+monitor_speed = 115200
