--- a/StripeTastic/platformio.ini
+++ b/StripeTastic/platformio.ini
@@ -18,3 +18,5 @@ lib_deps = ESP Async WebServer
 ;platform_packages = framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git // TODO: Remove if not needed.
 
 monitor_speed = 115200
+monitor_filters = esp32_exception_decoder, default
+build_type = debug
