--- a/StripeTastic/platformio.ini
+++ b/StripeTastic/platformio.ini
@@ -20,3 +20,8 @@ lib_deps = ESP Async WebServer
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder, default
 build_type = debug
+
+; TODO: Create ignored platform.io ini wich each developer can change.
+;[env:christian-tower]
+upload_port = COM[8] ; should may changed.
+monitor_port = COM[8] ; should may also changed.
