--- a/StripeTastic/platformio.ini
+++ b/StripeTastic/platformio.ini
@@ -12,16 +12,11 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-
-# using the latest stable version
-lib_deps = ESP Async WebServer
-;platform_packages = framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git // TODO: Remove if not needed.
-
+lib_deps = 
+	ESP Async WebServer
+	kosme/arduinoFFT@^1.5.5
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder, default
 build_type = debug
-
-; TODO: Create ignored platform.io ini wich each developer can change.
-;[env:christian-tower]
-upload_port = COM[8] ; should may changed.
-monitor_port = COM[8] ; should may also changed.
+upload_port = COM[8]
+monitor_port = COM[8]
