Effect's implementation first ball function done

--- a/StripeTastic/platformio.ini
+++ b/StripeTastic/platformio.ini
@@ -20,3 +20,11 @@ monitor_filters = esp32_exception_decoder, default
 build_type = debug
 upload_port = COM[8]
 monitor_port = COM[8]
+
+;build_flags = 
+;    -D CONFIG_ASYNC_TCP_RUNNING_CORE=0
+
+
+build_flags =
+   ${env.build_flags}
+;    -DCONFIG_ASYNC_TCP_RUNNING_CORE=0
