--- a/StripeTastic/.vscode/settings.json
+++ b/StripeTastic/.vscode/settings.json
@@ -2,8 +2,9 @@
 	"files.associations": {
 		"MacBookProKeyboardShortcuts": "fsharp",
 		"*.csv": "csv (semicolon)",
-		"map": "cpp"
-    },
+		"map": "cpp",
+		"vector": "cpp"
+	},
 	"C_Cpp.intelliSenseEngineFallback": "Enabled",
 	"C_Cpp.errorSquiggles": "Enabled"
 }
