Added web forwarding of _logger.

--- a/StripeTastic/.vscode/settings.json
+++ b/StripeTastic/.vscode/settings.json
@@ -12,7 +12,8 @@
 		"array": "cpp",
 		"functional": "cpp",
 		"regex": "cpp",
-		"tuple": "cpp"
+		"tuple": "cpp",
+		"streambuf": "cpp"
 	},
 	"C_Cpp.intelliSenseEngineFallback": "Enabled",
 	"C_Cpp.errorSquiggles": "Enabled"
