--- a/StripeTastic/data_src/tsconfig.json
+++ b/StripeTastic/data_src/tsconfig.json
@@ -7,6 +7,7 @@
             "dom"
         ],
         "sourceMap": true,
+        "mapRoot": "/data_src/",
         "outFile": "../data/js/app.js",
         "strictNullChecks": false,
         "experimentalDecorators": true,
