--- a/StripeTastic/platformio.ini
+++ b/StripeTastic/platformio.ini
@@ -14,29 +14,29 @@ board = esp32doit-devkit-v1
 framework = arduino
 lib_deps = 
 	ESP Async WebServer
-	kosme/arduinoFFT@^1.5.5
+	kosme/arduinoFFT
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder, default
-
-build_flags =
-   ${env.build_flags}
-;    -D CONFIG_ASYNC_TCP_RUNNING_CORE=0
+build_flags = 
+	${env.build_flags}
 
 [env:doit-production]
 extends = esp32doit-devkit-v1
 build_type = debug
 upload_port = COM[8]
 monitor_port = COM[8]
-
+lib_deps = 
+	bblanchon/ArduinoJson@^6.17.0
+	makuna/NeoPixelBus@^2.6.0
 
 [env:doit-esp-prog-debug]
 extends = esp32doit-devkit-v1
-
 build_type = debug
 debug_port = COM[3]
-
 upload_port = COM[4]
 monitor_port = COM[4]
-
 debug_tool = esp-prog
 upload_protocol = esp-prog
+lib_deps = 
+	bblanchon/ArduinoJson@^6.17.0
+	makuna/NeoPixelBus@^2.6.0
