fixed logger bug, debugging fixes

--- a/StripeTastic/platformio.ini
+++ b/StripeTastic/platformio.ini
@@ -32,11 +32,14 @@ lib_deps =
 [env:doit-esp-prog-debug]
 extends = esp32doit-devkit-v1
 build_type = debug
-debug_port = COM[3]
-upload_port = COM[4]
-monitor_port = COM[4]
-debug_tool = esp-prog
-upload_protocol = esp-prog
+;debug_port = COM[4]
+;upload_port = COM[4]
+;monitor_port = COM[4]
+
 lib_deps = 
 	bblanchon/ArduinoJson@^6.17.0
 	makuna/NeoPixelBus@^2.6.0
+
+debug_tool = esp-prog
+upload_protocol = esp-prog
+debug_init_break = tbreak setup
