--- a/StripeTastic/platformio.ini
+++ b/StripeTastic/platformio.ini
@@ -8,38 +8,22 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[esp32doit-devkit-v1]
+[platformio]
+default_envs = doit-esp32-debug
+
+[env:doit-esp32-debug]
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 lib_deps = 
 	ESP Async WebServer
 	kosme/arduinoFFT
+	bblanchon/ArduinoJson@^6.17.0
+	makuna/NeoPixelBus@^2.6.0
 monitor_speed = 115200
-monitor_filters = esp32_exception_decoder, default
-build_flags = 
-	${env.build_flags}
-
-[env:doit-production]
-extends = esp32doit-devkit-v1
+monitor_filters = 
+	esp32_exception_decoder
+	default
 build_type = debug
 upload_port = COM[8]
 monitor_port = COM[8]
-lib_deps = 
-	bblanchon/ArduinoJson@^6.17.0
-	makuna/NeoPixelBus@^2.6.0
-
-[env:doit-esp-prog-debug]
-extends = esp32doit-devkit-v1
-build_type = debug
-;debug_port = COM[4]
-;upload_port = COM[4]
-;monitor_port = COM[4]
-
-lib_deps = 
-	bblanchon/ArduinoJson@^6.17.0
-	makuna/NeoPixelBus@^2.6.0
-
-debug_tool = esp-prog
-upload_protocol = esp-prog
-debug_init_break = tbreak setup
