--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ StripeTastic/cmake-build-doit-production
 StripeTastic/cmake-build-debug
 StripeTastic/cmake-build-doit-esp-prog-debug
 StripeTastic/cmake-build-default
+StripeTastic/cmake-build-*
