--- a/.gitignore
+++ b/.gitignore
@@ -51,9 +51,9 @@ Module.symvers
 Mkfile.old
 dkms.conf
 **/node_modules/
-StripeTastic/.idea
-StripeTastic/cmake-build-doit-production
-StripeTastic/cmake-build-debug
-StripeTastic/cmake-build-doit-esp-prog-debug
-StripeTastic/cmake-build-default
-StripeTastic/cmake-build-*
+# StripeTastic/.idea
+# StripeTastic/cmake-build-doit-production
+# StripeTastic/cmake-build-debug
+# StripeTastic/cmake-build-doit-esp-prog-debug
+# StripeTastic/cmake-build-default
+# StripeTastic/cmake-build-*
