some more gitignores and structure cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,5 @@ dkms.conf
 # StripeTastic/cmake-build-doit-esp-prog-debug
 # StripeTastic/cmake-build-default
 # StripeTastic/cmake-build-*
+StripeTastic/.pio
+StripeTastic/.vscode
