--- a/StripeTastic.Firmware/platformio.ini
+++ b/StripeTastic.Firmware/platformio.ini
@@ -20,6 +20,7 @@ lib_deps =
 	kosme/arduinoFFT
 	bblanchon/ArduinoJson@^6.17.0
 	makuna/NeoPixelBus@^2.6.0
+	https://github.com/lorol/LITTLEFS.git
 monitor_speed = 115200
 monitor_filters = 
 	esp32_exception_decoder
@@ -27,3 +28,5 @@ monitor_filters =
 build_type = debug
 upload_port = COM[8]
 monitor_port = COM[8]
+platform_packages = framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
+extra_scripts = ./littlefsbuilder.py
