--- a/StripeTastic.Client/source/package.json
+++ b/StripeTastic.Client/source/package.json
@@ -25,6 +25,6 @@
     "@types/jquery": "^3.5.4",
     "@types/jquery.window": "^5.0.29",
     "@types/sizzle": "^2.3.2",
-    "tsc": "^1.20150623.0"
+    "typescript": "^4.0.5"
   }
 }
